[metadata]
name = timr
version = 1.0.0-dev.2
author = Mike Glotzkowski
author_email = author@example.com
description = Time to submit while mobile working
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/MikeGlotzkowski/timr
project_urls =
    Bug Tracker = https://github.com/MikeGlotzkowski/timr/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.8